--- a/app/src/main/res/layout/activity_dang_ki.xml
+++ b/app/src/main/res/layout/activity_dang_ki.xml
@@ -55,7 +55,8 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@id/ll_textdangky" />
+        app:layout_constraintTop_toBottomOf="@id/ll_textdangky"
+        android:autofillHints="emailAddress" />
 
 
     <EditText
@@ -69,10 +70,11 @@
         android:drawablePadding="5dp"
         android:fontFamily="@font/gotham"
         android:hint="Username"
-        android:inputType="textEmailAddress"
+        android:inputType="textPersonName"
         android:paddingLeft="10dp"
         app:layout_constraintTop_toBottomOf="@+id/email"
-        tools:layout_editor_absoluteX="20dp" />
+        tools:layout_editor_absoluteX="20dp"
+        android:autofillHints="username" />
 
     <EditText
         android:id="@+id/pass"
@@ -88,7 +90,8 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        android:autofillHints="password" />
 
 
     <EditText
@@ -105,7 +108,8 @@
         android:hint="Confirm Password"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/pass" />
+        app:layout_constraintTop_toBottomOf="@+id/pass"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/mobile"
@@ -121,7 +125,8 @@
         android:hint="Mobile"
         android:inputType="number"
         android:paddingLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/repass" />
+        app:layout_constraintTop_toBottomOf="@+id/repass"
+        android:autofillHints="phone" />
 
     <Button
         android:id="@+id/btndangki"
@@ -132,7 +137,7 @@
         android:background="@drawable/background_button"
         android:text="Đăng kí"
         android:textColor="@android:color/white"
-        android:textSize="18dp"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/mobile"
         tools:layout_editor_absoluteX="20dp" />
 
