--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -13,7 +13,8 @@
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/desc_logo" />
 
     <LinearLayout
         android:id="@+id/ll_textChao"
@@ -62,7 +63,8 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@id/ll_textChao" />
+        app:layout_constraintTop_toBottomOf="@id/ll_textChao"
+        android:autofillHints="emailAddress" />
 
     <EditText
         android:id="@+id/password"
@@ -77,7 +79,8 @@
         android:hint="Pass"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+        app:layout_constraintTop_toBottomOf="@+id/email"
+        android:autofillHints="password" />
 
 
     <TextView
@@ -101,7 +104,7 @@
         android:background="@drawable/background_button"
         android:text="@string/login"
         android:textColor="@android:color/white"
-        android:textSize="18dp"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
@@ -139,7 +142,8 @@
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/google" />
+                android:src="@drawable/google"
+                android:contentDescription="@string/desc_logo" />
 
             <TextView
                 android:layout_width="wrap_content"
