--- a/app/src/main/res/layout/activity_sach.xml
+++ b/app/src/main/res/layout/activity_sach.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.TruyenActivity">
+    tools:context=".activity.SachActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toobar"
-        app:title="Truyện"
+        app:title="Sách"
         android:background="#FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
