--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,7 +25,9 @@
         android:background="@drawable/custom_edittext"
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/toobar"
-        android:textColorHint="#616161" />
+        android:textColorHint="#616161"
+        android:inputType="text"
+        android:importantForAutofill="no" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleview_search"
