fix SachAdapter, add TruyenAdapter

--- a/app/src/main/res/layout/activity_sach.xml
+++ b/app/src/main/res/layout/activity_sach.xml
@@ -8,7 +8,7 @@
     tools:context=".activity.SachActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toobar"
-        app:title="Sách"
+        app:title="@string/books"
         android:background="#FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
