--- a/app/src/main/res/menu/navigation_menu_left.xml
+++ b/app/src/main/res/menu/navigation_menu_left.xml
@@ -8,13 +8,13 @@
             android:icon="@drawable/ic_baseline_account_circle_24"
             android:title="Tài khoản của tôi" />
         <item
+            android:id="@+id/nav_sach"
+            android:icon="@drawable/ic_baseline_menu_book_24"
+            android:title="Sách" />
+        <item
             android:id="@+id/nav_truyen"
             android:icon="@drawable/ic_baseline_menu_book_24"
             android:title="Truyện" />
-        <item
-            android:id="@+id/nav_tieuthuyet"
-            android:icon="@drawable/ic_baseline_menu_book_24"
-            android:title="Tiểu thuyết" />
         <item
             android:id="@+id/nav_shop_loc"
             android:icon="@drawable/ic_baseline_location_on_24"
