--- a/app/src/main/res/layout/activity_truyen.xml
+++ b/app/src/main/res/layout/activity_truyen.xml
@@ -7,7 +7,7 @@
     tools:context=".activity.TruyenActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toobar"
-        app:title="@string/novel"
+        app:title="@string/comic"
         android:background="#FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
