--- a/app/src/main/res/layout/item_truyen.xml
+++ b/app/src/main/res/layout/item_truyen.xml
@@ -10,19 +10,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
+        android:layout_marginVertical="10dp"
         android:orientation="horizontal"
         android:weightSum="10">
 
         <ImageView
             android:id="@+id/itemdt_image"
             android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="3"
-            android:src="@drawable/iconnew_w512" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_weight="3" />
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="7"
             android:orientation="vertical">
             <TextView
