--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -121,35 +121,27 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/inputlayout"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/cardview"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtdiachi"
             android:drawableLeft="@drawable/ic_baseline_add_location_24"
             android:drawablePadding="5dp"
+            android:padding="5dp"
+            android:background="@drawable/custom_edittext"
+            android:layout_margin="5dp"
             android:hint="@string/hint_address"
             android:textColorHint="@android:color/holo_red_light"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="45dp"
+            app:layout_constraintTop_toBottomOf="@+id/cardview"/>
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/btndathang"
         android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/inputlayout"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtdiachi"
+        android:layout_marginHorizontal="10dp"
         android:background="@drawable/background_button"
         android:text="@string/buy_now"
+        android:textSize="18sp"
         android:textColor="@android:color/white"
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
