--- a/app/src/main/res/layout/activity_book_category.xml
+++ b/app/src/main/res/layout/activity_book_category.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SachActivity">
+    tools:context=".activity.BookCategoryActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toobar"
         app:title="@string/books"
