--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -60,7 +60,7 @@
         android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="5dp"
         android:fontFamily="@font/gotham"
-        android:hint="Email"
+        android:hint="Gmail"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         app:layout_constraintTop_toBottomOf="@id/ll_textChao"
